@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2008-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2008-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -214,14 +214,23 @@ template< typename T > struct IsVecVectorTypedData : boost::mpl::or_< IsVec2Vect
 /// IsNumericVectorTypedData
 template< typename T > struct IsNumericVectorTypedData : boost::mpl::and_< IsVectorTypedData<T>, boost::is_arithmetic< typename VectorValueType<T>::type >, boost::mpl::not_< boost::is_same< typename VectorValueType<T>::type, bool > > > {};
 
+/// IsNumericBasedVectorTypedData - true if the data holds a vector of types where BaseType is numeric
+template< typename T > struct IsNumericBasedVectorTypedData : boost::mpl::and_< IsVectorTypedData<T>, boost::is_arithmetic< typename T::BaseType >, boost::mpl::not_< boost::is_same< typename T::BaseType, bool > > > {};
+
 /// IsFloatVectorTypedData
 template< typename T > struct IsFloatVectorTypedData : boost::mpl::and_< IsVectorTypedData<T>, boost::is_floating_point< typename VectorValueType<T>::type > > {};
 
 /// IsNumericSimpleTypedData
 template< typename T > struct IsNumericSimpleTypedData : boost::mpl::and_< IsSimpleTypedData<T>, boost::is_arithmetic< typename ValueType<T>::type >, boost::mpl::not_< boost::is_same< typename ValueType<T>::type, bool > > > {};
 
+/// IsNumericBasedSimpleTypedData - true if the data is simple and BaseType is numeric
+template< typename T > struct IsNumericBasedSimpleTypedData : boost::mpl::and_< IsSimpleTypedData<T>, boost::is_arithmetic< typename T::BaseType >, boost::mpl::not_< boost::is_same< typename T::BaseType, bool > > > {};
+
 /// IsNumericTypedData
 template< typename T > struct IsNumericTypedData : boost::mpl::or_< IsNumericSimpleTypedData<T>, IsNumericVectorTypedData<T> > {};
+
+/// IsNumericBasedTypedData
+template< typename T > struct IsNumericBasedTypedData : boost::mpl::or_< IsNumericBasedSimpleTypedData<T>, IsNumericBasedVectorTypedData<T> > {};
 
 namespace Detail
 {
